src/test/ui/pattern/usefulness/non-exhaustive-match-nested.stderr
error[E0004]: non-exhaustive patterns: `(Some(&[]), Err(_))` not covered
  --> $DIR/non-exhaustive-match-nested.rs:7:11
   |
LL |     match (l1, l2) {
   |           ^^^^^^^^ pattern `(Some(&[]), Err(_))` not covered
   |
   = help: ensure that all possible cases are being handled, possibly by adding wildcards or more match arms

error[E0004]: non-exhaustive patterns: `A(C)` not covered
  --> $DIR/non-exhaustive-match-nested.rs:17:11
   |
LL | enum T { A(U), B }
   | ------------------
   | |        |
   | |        not covered
   | `T` defined here
...
LL |     match x {
   |           ^ pattern `A(C)` not covered
   |
   = help: ensure that all possible cases are being handled, possibly by adding wildcards or more match arms

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0004`.
